# netspeed-plugin

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.build  README.md  build.sh  docker-build.sh  mainwidget.cpp  mainwidget.h  netspeedplugin.cpp  netspeedplugin.h  type.h
.github/workflows/: build.yml
debian/: changelog  control  copyright  install  postinst  postrm  rules
resources/gschema/: com.deepin.dde.dock.module.netspeed-monitor.gschema.xml
